# hyprwinwrap

./: .gitignore  CMakeLists.txt  README.md  hyprpm.toml  main.cpp  test.sh
